[tool.poetry]
name = "whole-foods-delivery-slot"
version = "0.1.0"
description = ""
authors = ["Benjamin Rapaport <benjamin.rapaport@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
beautifulsoup4 = "^4.8.2"
webdriver-manager = "^2.3.0"
selenium = "^3.141.0"
urllib3 = "^1.25.8"
chromedriver-binary = "^83.0.4103"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
